--- a/prcpp-exam/exam.tex
+++ b/prcpp-exam/exam.tex
@@ -10,36 +10,144 @@
 \maketitlepage
 \signpage
 
+\chapter{} %1
+
+\section{}
+The output for \texttt{TestLocking0.java} clearly indicates that it is not thread-safe.
+\begin{lstlisting}[language={}, frame={}]
+mac610262:src jbec$ java TestLocking0
+Sum is 1505632.000000 and should be 2000000.000000
+mac610262:src jbec$ java TestLocking0
+Sum is 1490208.000000 and should be 2000000.000000
+mac610262:src jbec$ java TestLocking0
+Sum is 1497894.000000 and should be 2000000.000000
+mac610262:src jbec$ java TestLocking0
+Sum is 1505498.000000 and should be 2000000.000000
+\end{lstlisting}
+
+The actual sum deviates from the expected sum leading me to believe that a race condition occurs in the code.
+
+\section{}
+The problem is that while the \texttt{addInstance} method locks the object instance, \texttt{addStatic} locks the class. Hence the field \texttt{sum} is not guarded by the same lock. This allows for multiple threads to simultaneously access the \texttt{sum} variable, therefore not upholding mutual exclusion, causing the race condition.
+
+\section{}
+A simple solution is to change \texttt{addInstance} so that it is guarded by the class lock used by the static synchronized methods
+\begin{lstlisting}[frame={}]
+public void addInstance(double x) {
+    synchronized(Mystery.class){
+        sum += x;
+    }
+}
+\end{lstlisting}
+This now ensures mutual exclusion as \texttt{sum} is now guarded by the same lock. Rerunning the code shows that the expected result and the actual result are now the same.
+
+\begin{lstlisting}[language={}, frame={}]
+mac610262:src jbec$ java TestLocking0
+Sum is 2000000.000000 and should be 2000000.000000
+mac610262:src jbec$ java TestLocking0
+Sum is 2000000.000000 and should be 2000000.000000
+mac610262:src jbec$ java TestLocking0
+Sum is 2000000.000000 and should be 2000000.000000
+mac610262:src jbec$ java TestLocking0
+Sum is 2000000.000000 and should be 2000000.000000
+\end{lstlisting}
+
+\chapter{} %2
+\section{}
+The simplest way would be to make a synchronized version that guards \texttt{items} and \texttt{size} with an instance lock. This would ensure safe concurrent access to the arraylist.
+\section{}\label{sec:lock}
+While the näive approach described above makes the arraylist threadsafe, it does not allow parallel access and thus doesn't scale. Actually I expect the synchronized version to perform significantly worse when used by many threads compared to only a single thread.
+\section{}
+A simple answer to why the purposed pattern is not threadsafe is found in the sample given in the assignment. The example clearly shows that both \texttt{add} and \texttt{set} accesses \texttt{items} and \texttt{size}. As the methods uses different locks, concurrent access to \texttt{items} and \texttt{size} can occur making it not threadsafe.
+
+\moreFancyQuote{When thread $A$ executes a synchronized block, and subsequently thread $B$ enters a synchronized block guarded by the same lock, the values of variables that were visible to $A$ prior to releasing the lock are guaranteed to be visible to $B$ upon acquiring the lock.}{\citet[p. 37]{goetz2006java}}
+
+However, because the methods uses different locks, visibility is not guaranteed.
+\section{}
+While it is possible that a version might exist that makes this threadsafe, it will still require mutual exclusion when at least writing to \texttt{items} and \texttt{size}. I don't see many other (simple) ways than to fully lock both \texttt{items} and \texttt{size} when accessed. Thus it won't make much sense to have a lock for the methods if we either way have to lock the only two shared fields. Then we could as well just only lock those instead.
+
+\chapter{} %3
+\section{}
+The \texttt{totalSize} field can be made threadsafe by either using an \texttt{AtomicInteger} or by having \texttt{totalSize} guarded by a static lock object. The following snippet shows how it would be implemented in the code using an \texttt{AtomicInteger}
+
+\begin{lstlisting}[frame={}]
+private static AtomicInteger totalSize = new AtomicInteger();
+
+public boolean add(double x) {
+    if (size == items.length) {
+        ...
+    }
+    items[size] = x;
+    size++;
+    totalSize.incrementAndGet();
+    return true;
+}
+
+public static int totalSize() {
+    return totalSize.get();
+}
+\end{lstlisting}
+
+\section{}
+The \texttt{allLists} field can be make threadsafe by guarding it with a static lock object. It can be implemented in code in following way.
+\begin{lstlisting}[frame={}]
+private static HashSet<DoubleArrayList> allLists = new HashSet<>();
+private static Object ListsLock = new Object();
+
+public DoubleArrayList() {
+    synchronized(ListsLock){
+        allLists.add(this);
+    }
+}
+
+public static HashSet<DoubleArrayList> allLists() {
+    synchronized(ListsLock){
+        return allLists;
+    }
+}
+\end{lstlisting}
+
+\chapter{} %4
+\chapter{} %5
+\section{} %wrapper
+\section{} %with 40
+
+\begin{lstlisting}[language={},frame={}]
+mac610262:src jbec$ java SortingPipeline
+0.1 1.1 2.1 3.1 4.1 5.1 6.1 7.1 8.1 9.1 10.1 11.1 12.1 13.1 14.1 15.1 16.1 17.1 18.1 19.1 20.1 21.1 22.1 23.1 24.1 25.1 26.1 27.1 28.1 29.1 30.1 31.1 32.1 33.1 34.1 35.1 36.1 37.1 38.1 39.1
+\end{lstlisting}
+\section{} %with 100000
+\begin{lstlisting}[language={},frame={}]
+mac610262:src jbec$ java SortingPipeline
+# OS:   Mac OS X; 10.11; x86_64
+# JVM:  Oracle Corporation; 1.8.0_60
+# CPU:  null; 8 "cores"
+# Date: 2016-01-11T14:45:02+0100
+Sorting pipe                        125.9 ms       1.71          4
+\end{lstlisting}
+\chapter{} %6
+\chapter{} %7
+\chapter{} %8
+\chapter{} %9
+\chapter{} %10
+\chapter{} %11
+\chapter{} %12
+
 \chapter*{Example}
 
 This is code in a box
 
-\begin{lstlisting}[language=C, caption=This is a caption]
-    void fac(int n, int *res) {
-        if (n == 0)     /* fac's n */
-        *res = 1;
-        else {
-            int tmp;
-            fac(n-1, &tmp);
-            *res = tmp * n;
-        }
-    }
+\begin{lstlisting}[caption=This is a caption]
 \end{lstlisting}
 
 
 This is code in the free
 
-\begin{lstlisting}[language=ML, frame={}]
-    let rec lookup env x =
-    match env with 
-    | []        -> failwith (x + " not found")
-    | (y, v)::r -> if x=y then v else lookup r x;;
-
-    type expr = 
-    | CstI of int
-    | Var of string
-    | Prim of string * expr * expr;;
+\begin{lstlisting}[frame={}]
 \end{lstlisting}
+
+\bibliographystyle{plainnat}
+\bibliography{bibliography}
 
 \label{LastPage}
 \end{document}
