--- a/prcpp-exam/ituhandin.cls
+++ b/prcpp-exam/ituhandin.cls
@@ -67,6 +67,7 @@
 \DeclareCaptionFont{white}{\color{white}}
 \DeclareCaptionFormat{listing}{\colorbox[cmyk]{0.43, 0.35, 0.35,0.01}{\parbox{\textwidth}{\hspace{15pt}#1#2#3}}}
 \captionsetup[lstlisting]{format=listing,labelfont=white,textfont=white, singlelinecheck=false, margin=0pt, font={bf,footnotesize}}
+\renewcommand{\lstlistingname}{}
 
 
 \addtolength{\topmargin}{-1.5cm}
