--- a/prcpp-exam/bibliography.bib
+++ b/prcpp-exam/bibliography.bib
@@ -4,3 +4,11 @@
     year={2006},
     publisher={Pearson Education}
 }
+@inproceedings{michael1996simple,
+    title={Simple, fast, and practical non-blocking and blocking concurrent queue algorithms},
+    author={Michael, Maged M and Scott, Michael L},
+    booktitle={Proceedings of the fifteenth annual ACM symposium on Principles of distributed computing},
+    pages={267--275},
+    year={1996},
+    organization={ACM}
+}
